--- a/D01 - Introduction/Item 4 - Acme_Madruga/Aleks/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Aleks/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -18,6 +18,6 @@ master.page.profile 				= Profile
 master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
-
+master.page.terms = Terms and Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
