Finder preparado. Profile completado. Customisation System completado.
- Va a hacer falta pasarle el ModelAndView modificado para que coja la customisacion del sistema correctamente.
- Hay un metodo en AbstractController (el último) que es para los formularios. Para evitar problemas con las RequestUris de los formularios.

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/profile/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/profile/messages.properties
@@ -12,7 +12,7 @@ user.link = Link
 user.save = Save
 user.cancel = Cancel
 user.commit.error = Error to create the profile
-
+profile.edit = Edit
 profile.title.1 = List of profile
 profile.nick = Nick
 profile.socialNetworkName = Social Network Name
