--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/profile/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/profile/messages_es.properties
@@ -12,7 +12,7 @@ user.link = Link
 user.save = Guardar
 user.cancel = Cancelar
 user.commit.error = Error al crear el perfil
-
+profile.edit = Editar
 profile.title.1 = Lista de tus perfiles
 profile.nick = Nick
 profile.socialNetworkName = Nombre de red social
