--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -7,18 +7,13 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrador
-master.page.administrator.action.1	= Acción 1
-master.page.administrator.action.2	= Acción 2
-
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
+master.page.administrator.custom	= Customisar sistema
 
 master.page.profile 				= Perfil
-master.page.profile.action.1 		= Acción 1
-master.page.profile.action.2		= Acción 2
-master.page.profile.action.3		= Acción 3
+master.page.profile.list		= Perfiles
 
+master.page.custom = CustomisationSystem
+master.page.finder = Buscador
 master.page.terms = Terminos y Condiciones
 
 master.page.login 					= Entrar
