Entidad posicion completada. Arreglado bug en Customisation System.
- Mejora de customisation system
- Mejora del metodo editForm en AbstractController.

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/custom/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/custom/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 # Spanish
-
+custom.commit.error = Error
 custom.bannerInfo = Si el banner se cambia, se debe recargar la página
 custom.hours = Horas
 custom.instructions.spam = Introduce palabras minúsculas
