--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -16,5 +16,9 @@ master.page.custom = CustomisationSystem
 master.page.finder = Buscador
 master.page.terms = Terminos y Condiciones
 
+master.page.positions = Posiciones
+master.page.position.list = Lista de posiciones
+master.page.position.create = Crear una posicion
+
 master.page.login 					= Entrar
 master.page.logout 					= Salir
