--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/custom/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/custom/messages.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 # English
-
+custom.commit.error = Error
 custom.bannerInfo = If banner is changed, this webpage must be reloaded.
 custom.hours = Hours
 custom.instructions.spam = Introduce low words
