--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -13,6 +13,12 @@ master.page.custom = Customisation System
 master.page.finder = Finder
 master.page.profile 				= Profile
 master.page.profile.list		= Profiles
+
+master.page.positions = Positions
+master.page.position.list = List positions
+master.page.position.create = Create a position
+
+
 master.page.terms = Terms and Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
