Box terminada a falta de revisión

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -21,3 +21,5 @@ master.page.profile.action.3		= Action 3
 master.page.terms = Terms and Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
+
+master.page.boxes = Boxes
