--- a/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -23,3 +23,5 @@ master.page.terms = Terminos y Condiciones
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+
+master.page.boxes = Cajas
