Subida de Procession (list)
Archivos cambiados:
- ProcessionController
- ProcessionToStringConverter
- StringToProcessionConverter
- ProcessionRepository
- ProcessionService
- converters.xml
- security.xml
- master-page/header.jsp
- ambos messages properties de procession
- list.jsp de procession

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -11,6 +11,7 @@ master.page.administrator.custom	= Customisar sistema
 
 master.page.profile 				= Perfil
 master.page.profile.list		= Perfiles
+master.page.procession.list		= Procesiones
 
 master.page.custom = CustomisationSystem
 master.page.finder = Buscador
