--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -13,6 +13,7 @@ master.page.custom = Customisation System
 master.page.finder = Finder
 master.page.profile 				= Profile
 master.page.profile.list		= Profiles
+master.page.procession.list		= Procession
 
 master.page.positions = Positions
 master.page.position.list = List positions
