--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/procession/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/procession/messages.properties
@@ -8,6 +8,13 @@
 # English
 
 procession.list = Processions List
+procession.show = Show more
+procession.ticker = Ticker
+procession.title = Title
+procession.description = Description
+procession.float = Show floats
+procession.edit = Edit
+procession.delete = Delete
 
 # Finder
 
@@ -18,3 +25,4 @@ finder.area = Area
 finder.previous = Previous Search
 finder.save = Search
 finder.cancel = Cancel
+finder.commit.error = Error
