--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
@@ -9,6 +9,13 @@
 
 # List y Edit
 procession.list = Lista de procesiones
+procession.show = Ver más
+procession.ticker = Ticker
+procession.title = Título
+procession.description = Descripción
+procession.float = Ver pasos
+procession.edit = Editar
+procession.delete = Borrar
 
 # Finder
 
@@ -19,3 +26,4 @@ finder.area = Area
 finder.save = Buscar
 finder.previous = Busqueda previa
 finder.cancel = Cancelar
+finder.commit.error = Error
