Box completo y message a a falta de arreglar el problema del save de message

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -25,3 +25,4 @@ master.page.login 					= Entrar
 master.page.logout 					= Salir
 
 master.page.boxes = Cajas
+master.page.message.create = Mandar un mensaje
