--- a/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Zeki/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -23,3 +23,4 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.boxes = Boxes
+master.page.message.create = Send message
