Subida de proyecto propio

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -12,9 +12,11 @@ master.page.administrator.custom	= Customisar sistema
 master.page.profile 				= Perfil
 master.page.profile.list		= Perfiles
 master.page.procession.list		= Procesiones
+master.page.float.list		= Pasos
 
 master.page.custom = CustomisationSystem
 master.page.finder = Buscador
+master.page.procession.create = Crear procesión
 master.page.terms = Terminos y Condiciones
 
 master.page.positions = Posiciones
