--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages.properties
@@ -12,9 +12,14 @@ procession.show = Show more
 procession.ticker = Ticker
 procession.title = Title
 procession.description = Description
+procession.momentOrganised = Organised moment
+procession.finalMode = Final mode
 procession.float = Show floats
 procession.edit = Edit
 procession.delete = Delete
+procession.save = Save
+procession.cancel = Cancel
+procession.commit.error = Error
 
 # Finder
 
