--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
@@ -13,9 +13,14 @@ procession.show = Ver más
 procession.ticker = Ticker
 procession.title = Título
 procession.description = Descripción
+procession.momentOrganised = Fecha para la organización
+procession.finalMode = Modo final
 procession.float = Ver pasos
 procession.edit = Editar
 procession.delete = Borrar
+procession.save = Guardar
+procession.cancel = Cancelar
+procession.commit.error = Error
 
 # Finder
 
