Float y Processions terminados
A falta de checkeo de formulario y hacking, además del tema de los checklist en las vistas de ver más

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/float/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/float/messages.properties
@@ -13,6 +13,7 @@ float.title = Title
 float.description = Description
 float.pictures = Pictures
 float.edit = Edit
+float.commit.error = Error
 float.delete = Delete
 float.save = Save
 float.cancel = Cancel
