--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/float/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/float/messages_es.properties
@@ -13,6 +13,7 @@ float.show = Ver más
 float.title = Título
 float.description = Descripción
 float.pictures = Fotografías
+float.commit.error = Error
 float.edit = Editar
 float.delete = Borrar
 float.save = Guardar
