--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -11,12 +11,15 @@ master.page.administrator.custom	= Customisar sistema
 
 master.page.profile 				= Perfil
 master.page.profile.list		= Perfiles
-master.page.procession.list		= Procesiones
-master.page.float.list		= Pasos
+master.page.procession.list		= Lista de procesiones
+master.page.float.list		= Lista de pasos
 
 master.page.custom = CustomisationSystem
 master.page.finder = Buscador
+master.page.procession = Procesiones
 master.page.procession.create = Crear procesión
+master.page.float = Pasos
+master.page.float.create = Crear paso
 master.page.terms = Terminos y Condiciones
 
 master.page.positions = Posiciones
