--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages.properties
@@ -15,6 +15,7 @@ procession.description = Description
 procession.momentOrganised = Organised moment
 procession.finalMode = Final mode
 procession.float = Show floats
+procession.actual = Currently the floats that belong to this procession are
 procession.edit = Edit
 procession.delete = Delete
 procession.save = Save
