--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/procession/messages_es.properties
@@ -16,6 +16,7 @@ procession.description = Descripción
 procession.momentOrganised = Fecha para la organización
 procession.finalMode = Modo final
 procession.float = Ver pasos
+procession.actual = Actualmente los pasos que pertenecen a esta procesión son
 procession.edit = Editar
 procession.delete = Borrar
 procession.save = Guardar
