--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -13,9 +13,12 @@ master.page.custom = Customisation System
 master.page.finder = Finder
 master.page.profile 				= Profile
 master.page.profile.list		= Profiles
-master.page.procession.list		= Procession
-master.page.float.list		= Float
+master.page.procession.list		= List of processions
+master.page.float.list		= List of floats
+master.page.procession = Processions
 master.page.procession.create = Create procession
+master.page.float = Floats
+master.page.float.create = Create float
 
 master.page.positions = Positions
 master.page.position.list = List positions
