Subida de proyecto personal a falta de completar cosas de Endorsement

--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -20,6 +20,10 @@ master.page.procession.create = Create procession
 master.page.float = Floats
 master.page.float.create = Create float
 
+master.page.enrolment = Enrolments
+master.page.enrolment.list = List of enrolments
+master.page.brotherhood.list = List of brotherhoods
+
 master.page.positions = Positions
 master.page.position.list = List positions
 master.page.position.create = Create a position
