--- a/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Belen/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -20,6 +20,12 @@ master.page.procession = Procesiones
 master.page.procession.create = Crear procesión
 master.page.float = Pasos
 master.page.float.create = Crear paso
+
+master.page.enrolment = Registros 
+master.page.enrolment.list = Lista de registros
+
+master.page.brotherhood.list = Lista de hermandades
+
 master.page.terms = Terminos y Condiciones
 
 master.page.positions = Posiciones
