--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages.properties
@@ -17,10 +17,13 @@ master.page.profile.list		= Profiles
 master.page.positions = Positions
 master.page.position.list = List positions
 master.page.position.create = Create a position
-
+master.page.actor.personal = Edit personal data
 master.page.boxes = Boxes
 master.page.message.create = Send message
-
+master.page.create = Create
+master.page.actor.admin = Create administrator
+master.page.actor.member = Create Member
+master.page.actor.brotherhood = Create Brotherhood
 master.page.terms = Terms and Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
