--- a/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
+++ b/D01 - Introduction/Item 4 - Acme_Madruga/Angel/Acme-Madruga/src/main/webapp/views/master-page/messages_es.properties
@@ -19,9 +19,12 @@ master.page.terms = Terminos y Condiciones
 master.page.positions = Posiciones
 master.page.position.list = Lista de posiciones
 master.page.position.create = Crear una posicion
-
+master.page.actor.personal = Editar datos personales
 master.page.boxes = Cajas
 master.page.message.create = Enviar mensaje
-
+master.page.create = Crear
+master.page.actor.admin = Crear administrador
+master.page.actor.member = Crear miembro
+master.page.actor.brotherhood = Crear hermandad
 master.page.login 					= Entrar
 master.page.logout 					= Salir
