--- a/D02 - Functional Testing/Item 3 - Project/Zeki/Acme-Parade/src/main/webapp/views/parade/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Zeki/Acme-Parade/src/main/webapp/views/parade/messages.properties
@@ -23,7 +23,7 @@ procession.delete = Delete
 procession.save = Save
 procession.cancel = Cancel
 procession.commit.error = Error
-
+procession.status = Status
 # Finder
 
 finder.singleKey = Single KeyWord
