--- a/D02 - Functional Testing/Item 3 - Project/Zeki/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Zeki/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
@@ -22,6 +22,7 @@ procession.save = Guardar
 procession.cancel = Cancelar
 procession.commit.error = Error
 procession.request = Lista de Requests
+procession.status = Estado
 # Finder
 
 finder.singleKey = Palabra simple
