--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/request/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/request/messages_es.properties
@@ -8,7 +8,7 @@
 # Spanish
 request.formatofrowandcolumn = Formato inadecuado
 request.edit = Editar
-request.save = Guardat
+request.save = Guardar
 request.commit.error = Error
 request.delete = Borrar
 request.cancel = Cancelar
