--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/parade/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/parade/messages.properties
@@ -7,23 +7,25 @@
 # http://www.tdg-seville.info/License.html
 # English
 
-procession.request.create = Create request
-procession.request = Requests List
-procession.list = Parades List
-procession.show = Show more
-procession.ticker = Ticker
-procession.title = Title
-procession.description = Description
-procession.momentOrganised = Organised moment
-procession.finalMode = Final mode
-procession.float = Show floats
-procession.actual = Currently the floats that belong to this procession are
-procession.edit = Edit
-procession.delete = Delete
-procession.save = Save
-procession.cancel = Cancel
-procession.commit.error = Error
-
+parade.request.create = Create request
+parade.request = Requests List
+parade.list = Parades List
+parade.show = Show more
+parade.ticker = Ticker
+parade.title = Title
+parade.description = Description
+parade.momentOrganised = Organised moment
+parade.finalMode = Final mode
+parade.float = Show floats
+parade.actual = Currently the floats that belong to this parade are
+parade.edit = Edit
+parade.delete = Delete
+parade.save = Save
+parade.cancel = Cancel
+parade.commit.error = Error
+parade.status = Status
+parade.isFinalMode = Final Mode
+parade.isDraftMode = Draft Mode
 # Finder
 
 finder.singleKey = Single KeyWord
