--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
@@ -6,22 +6,25 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 # English
-procession.request.create = Crear request
-procession.list = Lista de desfiles
-procession.show = Ver mas
-procession.ticker = Ticker
-procession.title = Titulo
-procession.description = Descripcion
-procession.momentOrganised = Momento
-procession.finalMode = Modo final
-procession.float = Mostrar carrozas
-procession.actual = Carrozas de esta procesion
-procession.edit = Editar
-procession.delete = Borrar
-procession.save = Guardar
-procession.cancel = Cancelar
-procession.commit.error = Error
-procession.request = Lista de Requests
+parade.request.create = Crear solicitud
+parade.list = Lista de desfiles
+parade.show = Ver mas
+parade.ticker = Ticker
+parade.title = Titulo
+parade.description = Descripcion
+parade.momentOrganised = Momento
+parade.finalMode = Modo final
+parade.float = Mostrar carrozas
+parade.actual = Carrozas de esta Procesión
+parade.edit = Editar
+parade.delete = Borrar
+parade.save = Guardar
+parade.cancel = Cancelar
+parade.commit.error = Error
+parade.request = Lista de Solicitudes
+parade.status = Estado
+parade.isFinalMode = Modo Final
+parade.isDraftMode = Modo Borrador
 # Finder
 
 finder.singleKey = Palabra simple
