Configurado Servicios y Controladores de Segmento. Configurado requisitos de Area. Configurado datatype de coordenada.

--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/area/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/area/messages.properties
@@ -7,7 +7,7 @@
 # http://www.tdg-seville.info/License.html
 # English
 
-
+area.assign.error = <br>Error when choosing area. Select another.
 area.name = Name
 area.pictures = Pictures
 area.edit = Edit
