--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/area/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/area/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 # Spanish
-
+area.assign.error = <br>Error al asignar area. Elige otra.
 area.name = Nombre
 area.pictures = Fotos
 area.edit = Editar
