--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
@@ -5,6 +5,9 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+master.page.proclaims = Anuncios
+master.page.proclaim.list = Lista de anuncios
+master.page.proclaim.create = Crear anuncio
 master.page.dashboard = Dashboard
 master.page.administrator.dashboard = Estadisticas
 master.page.administrator.dashboardStat = Dashboard - Estadisticas
