--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/parade/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/parade/messages.properties
@@ -24,6 +24,9 @@ procession.save = Save
 procession.cancel = Cancel
 procession.commit.error = Error
 procession.status = Status
+procession.copy = Copy parade
+parade.status = Status
+parade.description.rejected = Why rejected
 # Finder
 
 finder.singleKey = Single KeyWord
