--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
@@ -23,6 +23,9 @@ procession.cancel = Cancelar
 procession.commit.error = Error
 procession.request = Lista de Requests
 procession.status = Estado
+procession.copy = Copiar desfile
+parade.status = Estado
+parade.description.rejected = Motivo de rechazo
 # Finder
 
 finder.singleKey = Palabra simple
