--- a/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/proclaim/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Angel/Acme-Parade/src/main/webapp/views/proclaim/messages_es.properties
@@ -8,6 +8,11 @@
 # Spanish
 
 # List y Edit
+proclaim.confirm1 = ¿Quiere guardar este anuncio?
+proclaim.confirm2 = ¿Esta seguro de que quiere guardarlo? No habrá vuelta atras.
+proclaim.finalMode = Modo final
+proclaim.date = Fecha
+proclaim.description = Texto
 proclaim.moment = Fecha de Registro
 proclaim.text = Texto
 proclaim.edit = Editar
