Subida de proyecto final

--- a/D02 - Functional Testing/Item 3 - Project/Belen/Acme-Parade/src/main/webapp/views/master-page/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Belen/Acme-Parade/src/main/webapp/views/master-page/messages.properties
@@ -38,6 +38,7 @@ master.page.brotherhood.listOwn = My list of brotherhoods
 master.page.brotherhood = Brotherhoods
 master.page.brotherhood.list = List of brotherhoods
 master.page.brotherhood.listDelete = List of left's brotherhoods
+master.page.brotherhood.history = History 
 
 master.page.actor.personal = Edit personal data
 master.page.boxes = Boxes
