--- a/D02 - Functional Testing/Item 3 - Project/Belen/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Belen/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
@@ -39,6 +39,7 @@ master.page.brotherhood.listOwn = Mi lista de fraternidades
 master.page.brotherhood.listDelete = Lista de fraternidades abandonadas
 master.page.brotherhood = Fraternidades
 master.page.brotherhood.list = Lista de hermandades
+master.page.brotherhood.history = Historia
 
 master.page.actor.personal = Editar datos personales
 master.page.boxes = Cajas
