--- a/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/master-page/messages_es.properties
@@ -40,6 +40,10 @@ master.page.brotherhood.listDelete = Lista de fraternidades abandonadas
 master.page.brotherhood = Fraternidades
 master.page.brotherhood.list = Lista de hermandades
 
+master.page.sponsorship= Patrocinio
+master.page.parade.list = Nuevo Patrocinio
+master.page.sponsorship.list = Mis patrocinios
+
 master.page.actor.personal = Editar datos personales
 master.page.boxes = Cajas
 master.page.message.create = Enviar mensaje
@@ -48,5 +52,6 @@ master.page.actor.admin = Crear administrador
 master.page.actor.member = Crear miembro
 master.page.actor.brotherhood = Crear hermandad
 master.page.actor.chapter = Crear cabildo
+master.page.actor.sponsor = Crear patrocinador
 master.page.login 					= Entrar
 master.page.logout 					= Salir
