--- a/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/parade/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/parade/messages.properties
@@ -23,7 +23,11 @@ procession.delete = Delete
 procession.save = Save
 procession.cancel = Cancel
 procession.commit.error = Error
+procession.status = Status
 
+
+sponsorship.create.title= Sponsorship
+sponsorship.create= New Sponsorship
 # Finder
 
 finder.singleKey = Single KeyWord
