--- a/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/master-page/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/master-page/messages.properties
@@ -39,6 +39,13 @@ master.page.brotherhood = Brotherhoods
 master.page.brotherhood.list = List of brotherhoods
 master.page.brotherhood.listDelete = List of left's brotherhoods
 
+master.page.sponsorship= Sponsorships
+master.page.parade.list = New Sponsorship
+master.page.sponsorship.list = My Sponsorship
+
+
+
+
 master.page.actor.personal = Edit personal data
 master.page.boxes = Boxes
 master.page.message.create = Send message
@@ -47,6 +54,7 @@ master.page.actor.admin = Create administrator
 master.page.actor.member = Create Member
 master.page.actor.brotherhood = Create Brotherhood
 master.page.actor.chapter = Create chapter
+master.page.actor.sponsor = Create sponsor
 master.page.terms = Terms and Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
