--- a/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Mari/Acme-Parade/src/main/webapp/views/parade/messages_es.properties
@@ -22,6 +22,10 @@ procession.save = Guardar
 procession.cancel = Cancelar
 procession.commit.error = Error
 procession.request = Lista de Requests
+procession.status = Estado
+
+sponsorship.create.title= Patrocinio
+sponsorship.create= Patrocinar
 # Finder
 
 finder.singleKey = Palabra simple
