--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/actor/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/actor/messages.properties
@@ -23,6 +23,9 @@ actor.save = Register
 actor.ban = Ban
 actor.unban = Ban out
 actor.cancel = Cancel
+actor.spam = Spammer?
+actor.spam.link = Mark as spammer
+actor.polarity = Polarity
 actor.commit.error = The actor has not been properly registered.
 actor.brotherhood.title = Title
 actor.username.wrong = Wrong User
