--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/actor/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/actor/messages_es.properties
@@ -22,6 +22,9 @@ actor.suspicious = Sospechoso
 actor.save = Registrar
 actor.ban = Ban
 actor.unban = UnBan
+actor.spam = Spammer?
+actor.spam.link = Marcar como spammer
+actor.polarity = Polaridad
 actor.cancel = Cancelar
 actor.username.wrong = Usuario erroneo
 actor.password.wrong = Contraseña erronea
