--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/custom/messages.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/custom/messages.properties
@@ -22,6 +22,8 @@ custom.priorities = Priorities
 custom.prefix = Prefix
 custom.save = Save
 custom.cancel = Cancel
+custom.deactivate = Deactivate
+custom.deactivate.sponsorships = Deactivate Sponsorships whose Credit Card is expired
 
 custom.avg = Average
 custom.min = Minimum
@@ -49,3 +51,6 @@ custom.ratioRequestbystatus = Ratio of request per status
 custom.Brotherhood = Brotherhood
 custom.largest = Largest Brotherhoods
 custom.smaller = Smallest Brotherhoods
+custom.creditCardMakes = Accepted Credit Card Makes
+custom.vat = VAT
+custom.flatFare = Flat Fare
