--- a/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/custom/messages_es.properties
+++ b/D02 - Functional Testing/Item 3 - Project/Aleks/Acme-Parade/src/main/webapp/views/custom/messages_es.properties
@@ -22,6 +22,8 @@ custom.priorities = Prioridades
 custom.prefix = Prefijo
 custom.save = Guardar
 custom.cancel = Cancelar
+custom.deactivate = Desactivar
+custom.deactivate.sponsorships = Desactivar los Patrocinios cuya tarjeta de crédito haya caducado
 
 custom.avg = Media
 custom.min = Minimo
@@ -49,3 +51,6 @@ custom.ratioRequestbystatus = Ratio of peticiones por estado
 custom.Brotherhood = Hermandades
 custom.largest = Hermandad con más miembros
 custom.smaller = Hermandad con menos miembros
+custom.creditCardMakes = Fabricantes de tarjetas de credito aceptados
+custom.vat = IVA
+custom.flatFare = Tarifa Plana
