Modelo UML actualizado. Proyecto de base del proyecto actualizado.

--- a/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/master-page/messages_es.properties
+++ b/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/master-page/messages_es.properties
@@ -5,19 +5,16 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+master.page.company.listPublic = Lista de compaï¿½ias publica
+master.page.position.listPublic = Lista de posiciones publica
 master.page.administrator			= Administrador
-master.page.administrator.action.1	= Acción 1
-master.page.administrator.action.2	= Acción 2
-
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
-
-master.page.profile 				= Perfil
-master.page.profile.action.1 		= Acción 1
-master.page.profile.action.2		= Acción 2
-master.page.profile.action.3		= Acción 3
-
+master.page.position = Posiciones
+master.page.position.list = Lista
+master.page.position.create = Crear
+master.page.profile = Perfil
+master.page.profile.list 				= Perfiles Sociales
+master.page.terms = Terminos y Condiciones
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+master.page.problem = Problemas
+master.page.company.problem.list = Lista de tus problemas
