--- a/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/profile/messages.properties
+++ b/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/profile/messages.properties
@@ -18,6 +18,6 @@ profile.nick = Nick
 profile.socialNetworkName = Social Network Name
 profile.link = Link
 profile.delete = Delete
-profile.commit.error = The profile cant't delete
-
+profile.commit.error = Error
+profile.cancel = Cancel
 profile.add = Add profile
