--- a/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/profile/messages_es.properties
+++ b/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/profile/messages_es.properties
@@ -18,6 +18,6 @@ profile.nick = Nick
 profile.socialNetworkName = Nombre de red social
 profile.link = Link
 profile.delete = Borrar
-profile.commit.error = El perfil no se pudo borrar
-
+profile.commit.error = Error
+profile.cancel = Cancelar
 profile.add = Añadir perfil
