--- a/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/master-page/messages.properties
+++ b/D03 - Performance Testing/Item 3 - Project/Acme-HackerRank/src/main/webapp/views/master-page/messages.properties
@@ -5,19 +5,16 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+master.page.company.listPublic = Public Companies List
+master.page.position.listPublic = Public positions list
 master.page.administrator			= Administrator
-master.page.administrator.action.1	= Action 1
-master.page.administrator.action.2	= Action 2
-
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
-
-master.page.profile 				= Profile
-master.page.profile.action.1 		= Action 1
-master.page.profile.action.2		= Action 2
-master.page.profile.action.3		= Action 3
-
+master.page.position = Positions
+master.page.position.list = List
+master.page.position.create = Create
+master.page.profile = Profile
+master.page.profile.list 				= Social Profiles
+master.page.terms = Terms & Conditions
 master.page.login 					= Login
 master.page.logout 					= Logout
+master.page.problem = Problems
+master.page.company.problem.list = List of your problems
