Acondicionado proyecto de Acme-Rookies
- Ficheros de vistas
- Ficheros de controladores
- Ficheros de repositorios
- Ficheros de Servicios
- Convertidores implementados
- Custom Tag de Random Banner (Limitar a 1)
- PopulateDatabase adaptado
- InitializeDatabase adaptado
- VAT de la CustomSystem montado

--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages.properties
@@ -41,3 +41,5 @@ custom.WorstPosition= Worst position
 
 custom.finder= Finder
 custom.EmptyVsNotEmpty = The ratio of empty versus non-empty finders
+
+custom.vat = VAT
