--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages_es.properties
@@ -40,3 +40,5 @@ custom.WorstPosition= Peor puesto
 custom.NumberOfResultFinder =Resultados del buscador
 custom.finder= Buscador
 custom.EmptyVsNotEmpty = Relación entre buscadores vacíos y no vacíos
+
+custom.vat = IVA
