Modelo actualizado. Configuracion realizada.
Auditor y Audits en proceso. 65% completado.

--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
@@ -5,5 +5,11 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+audit.text = Texto
+audit.moment = Momento de registro
+audit.score = Puntuacion
+audit.finalMode = Modo final
+audit.save = Guardar
+audit.delete = Borrar
 audit.cancel = Cancelar
+audit.error = Error
