--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages.properties
@@ -5,7 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+position.assign = Audit this position
+position.assign.problem = This position is already being audited
 position.ticker = Ticker
 position.title = Title
 position.description = Description
