--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages.properties
@@ -5,5 +5,11 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+audit.text = Text
+audit.moment = Moment
+audit.score = Score
+audit.finalMode = Final Mode
+audit.save = Save
+audit.delete = Delete
 audit.cancel = Cancel
+audit.error = Error
