--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
@@ -5,6 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+
+master.page.audit.positions = My positions to audit
 master.page.administrator.custom = Custom system
 master.page.administrator.customAction = Customise
 master.page.administrator.noenabled = No enabled actors
