--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+master.page.audit.positions = Mis puestos para auditar
 master.page.administrator.custom = Customizar Sistema
 master.page.administrator.customAction = Customizar
 master.page.administrator.noenabled = Actores Spam
