--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages_es.properties
@@ -5,7 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+position.assign = Auditar este puesto
+position.assign.problem = Este puesto ya esta siendo auditado
 position.ticker = Identificador
 position.title = Título
 position.description = Descripción
