Proyecto final versión 1

--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/actor/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/actor/messages_es.properties
@@ -31,8 +31,8 @@ phone.confirm2 = ¿Está seguro de que quiere guardarlo?
 actor.terms = Ud. no ha aceptado los Términos y Condiciones
 actor.terms.check = He leído los terminos y condiciones de este enlace
 actor.legalName = Nombre Fiscal
-
 actor.spam = ¿Emisor de correo basura?
+actor.score = Puntuación de la auditoría: 
 actor.export = Exportar datos
 actor.delete = Eliminar tu cuenta
 actor.delete.link = Pulsa aquí para eliminar tu cuenta
@@ -47,3 +47,6 @@ actor.wrong.email = Email inválido
 actor.wrong.creditCard = Tarjeta de Crédito inválida
 actor.wrong.phone = Teléfono inválido
 creditcard.invalid.expiration = Fecha de Expiración inválida
+actor.provider.make = Marca del proveedor
+delete.confirm = ¿Está seguro de que desea eliminar su cuenta?
+actor.wrong.username = Nombre de Usuario no válido
