--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages_es.properties
@@ -18,6 +18,7 @@ custom.resultFinder = Resultados del buscador
 custom.spamWordsEnglish = Palabras basura en Inglés
 custom.spamWordsSpanish = Palabras basura en Español
 custom.prefix = Prefijo
+custom.flat_rate = Flat rate
 custom.save = Guardar
 custom.cancel = Cancelar
 
@@ -42,3 +43,20 @@ custom.finder= Buscador
 custom.EmptyVsNotEmpty = Relación entre buscadores vacíos y no vacíos
 
 custom.vat = IVA
+
+custom.notification = Notificar a todos los usuarios
+
+custom.AuditPerPosition = Auditorías por puesto
+custom.AuditPerCompany = Auditorías por compañía
+custom.ItemPerProvider = Productos por proveedor
+custom.SponsorshipsPerProvider = Patrocinios por proveedor
+custom.SponsorshipsPerPosition = Patrocinios por puesto
+
+custom.auditScore = Puntuación de auditoría
+custom.HighestCompaniesAuditScore = Compañías con la puntuación más alta
+custom.maxItems = Productos por proveedor
+custom.Top5ProviderPerMaxItems = Top de los 5 proveedores con más productos
+custom.SponsorshipMoreThan10 = Patrocinios
+custom.ProvidersSponsorshipMoreThan10PerCent = Proveedores que tienen un número de de patrocinios superior al 10% de la media de patrocinios por proveedor
+custom.AverageSalary = Salario medio
+custom.averageSalaryMaxAverageAuditScore = Salario medio de los puestos con la puntuación más alta
