--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
@@ -5,7 +5,9 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-
+master.page.customise = Customise
+master.page.actor.register = Register
+master.page.actor.auditor = Register auditor
 master.page.audit.positions = My positions to audit
 master.page.administrator.custom = Custom system
 master.page.administrator.customAction = Customise
@@ -38,9 +40,21 @@ master.page.position.finder = Finder of positions
 master.page.actor.admin = Register Administrator
 master.page.actor.rookie = Register as Rookie
 master.page.actor.company = Register as Company
+master.page.actor.provider = Register as Provider
 master.page.create = Register
 master.page.edit.data = Edit Personal Data
 
 master.page.administrator.listActor = List of Actors
 master.page.administrator.listSpammers = List of Spammers
 master.page.administrator.listEnabled = List of Ban
+
+master.page.item.create= New Item
+master.page.item.myItem= My Items
+master.page.item.items= Items
+master.page.providers.listPublic= List of providers
+master.page.items.listPublic= List of items
+master.page.items.my = My items
+
+master.page.sponsorship= Sponsorships
+master.page.sponsorship.list = My Sponsorship
+master.page.sponsorship.listD = My Desactivate Sponsorships
