--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
@@ -6,6 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+master.page.providers.listPublic= Lista de Proveedores
+master.page.items.listPublic= Lista de articulos
+master.page.item.create= Nuevo Producto	
+master.page.item.myItem= Mis Productos
+master.page.item.items= Productos
+
+master.page.customise = Customizar sistema
+master.page.actor.register = Registrar
+master.page.actor.auditor = Registrar auditor
 master.page.audit.positions = Mis puestos para auditar
 master.page.administrator.custom = Customizar Sistema
 master.page.administrator.customAction = Customizar
@@ -36,9 +45,15 @@ master.page.position.finder = Buscador de Puestos de Trabajo
 master.page.actor.admin = Registrar Administrador
 master.page.actor.rookie = Registrar como Rookie
 master.page.actor.company = Registrar como Compañía
+master.page.actor.provider = Registrar como Proveedor
+
 master.page.create = Registrar
 master.page.edit.data = Editar los datos personales
 
 master.page.administrator.listActor = Lista de Actores
 master.page.administrator.listSpammers = Lista de Spammers
 master.page.administrator.listEnabled = Lista de Baneados
+
+master.page.sponsorship= Patrocinios
+master.page.sponsorship.list = Mis patrocinios
+master.page.sponsorship.listD = Mis Patrocinios desactivados
