--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/position/messages_es.properties
@@ -5,6 +5,8 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+
+position.audits.list = Lista de auditorias
 position.assign = Auditar este puesto
 position.assign.problem = Este puesto ya esta siendo auditado
 position.ticker = Identificador
@@ -40,3 +42,4 @@ finder.clear = Limpiar buscador
 position.application = Solicitud
 position.application.list = Lista de Solicitudes
 position.application.create = Solicitar
+position.createSponsorship = Crear patrocinio
