--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/actor/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/actor/messages.properties
@@ -30,6 +30,7 @@ actor.terms = You have not accepted terms and conditions
 actor.terms.check = I have read the terms and conditions from this link
 actor.legalName = VAT
 actor.spam = Spammer?
+actor.score = Audit score: 
 actor.spam.link = Mark as spammer
 actor.polarity = Polarity
 actor.export = Export data
@@ -46,3 +47,6 @@ actor.wrong.email = Invalid Email
 actor.wrong.creditCard = Invalid Credit Card
 actor.wrong.phone = Invalid Phone Number
 creditcard.invalid.expiration =  Invalid Expiration date
+actor.provider.make = Provider Make
+delete.confirm = Are you sure you want to delete your account?
+actor.wrong.username = Invalid Username
