--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
@@ -5,6 +5,9 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+audit.create = Crear auditoria
+audit.edit = Editar
+audit.show = Mostrar
 audit.text = Texto
 audit.moment = Momento de registro
 audit.score = Puntuacion
