--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/custom/messages.properties
@@ -18,6 +18,7 @@ custom.resultFinder = Finder results
 custom.spamWordsEnglish = SpamWords in English
 custom.spamWordsSpanish = SpamWords in Spanish
 custom.prefix = Prefix
+custom.flat_rate = Flat rate
 custom.save = Save
 custom.cancel = Cancel
 
@@ -43,3 +44,20 @@ custom.finder= Finder
 custom.EmptyVsNotEmpty = The ratio of empty versus non-empty finders
 
 custom.vat = VAT
+
+custom.notification = Notify all users
+
+custom.AuditPerPosition = Audit per position
+custom.AuditPerCompany = Audit per company
+custom.ItemPerProvider = Item per provider
+custom.SponsorshipsPerProvider = Sponsorships per provider
+custom.SponsorshipsPerPosition = Sponsorships per position
+
+custom.auditScore = Audit score
+custom.HighestCompaniesAuditScore = Companies with the highest audit score
+custom.maxItems = Items per provider
+custom.Top5ProviderPerMaxItems = Top 5 providers with the most items
+custom.SponsorshipMoreThan10 = Sponsorships
+custom.ProvidersSponsorshipMoreThan10PerCent = Providers who have a number of sponsorships exceeding 10% of the average of sponsorship per provider
+custom.AverageSalary = Average of salary
+custom.averageSalaryMaxAverageAuditScore = Average of position's salary with the highest score
