--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/item/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/item/messages.properties
@@ -6,4 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+item.provider = Provider
+item.name= Name
+item.description= Description
+item.urls = Urls
+item.pictures= Pictures
 item.cancel = Cancel
+item.showMore = Show More
+item.delete = Delete
+item.save= Save
+item.update = Edit
+item.commit.error= Error commit
+item.notblank = Must be not blank
