--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/item/messages_es.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/item/messages_es.properties
@@ -6,4 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+item.provider = Proveedor
+item.name= Nombre
+item.description= Descripción
+item.pictures= Imagenes
+item.urls = Urls
+item.showMore= Más información
 item.cancel = Cancelar
+item.delete = Borrar
+item.save= Guardar
+item.update= Editar
+item.commit.error= ERROR
+item.notblank = No debe ser blanco
