--- a/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/provider/messages.properties
+++ b/D04 - Acceptance Testing/Item 3 - Proyecto Base/Acme-Rookies/src/main/webapp/views/provider/messages.properties
@@ -5,14 +5,14 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-audit.create = Create audit
-audit.edit = Edit
-audit.show = Show
-audit.text = Text
-audit.moment = Moment
-audit.score = Score
-audit.finalMode = Final Mode
-audit.save = Save
-audit.delete = Delete
-audit.cancel = Cancel
-audit.error = Error
+
+item.provider= Proveedor
+provider.name = Name
+provider.surname = Surnames
+provider.photo = Photo
+provider.email = Email
+provider.phone = Phone
+provider.adress = Address
+provider.vat = VAT
+provider.make = Make
+provider.items = Provider Items
