Copia de Seguridad - ControlCheck - Angel

--- a/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
+++ b/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
@@ -5,6 +5,10 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+
+aolet.list.external = Lista externa de aolets
+aolet.list = Lista de aolets
+aolet.create = Crear aolet
 audit.create = Crear auditoria
 audit.edit = Editar
 audit.show = Mostrar
