Control Check - Omamek Version

--- a/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages.properties
+++ b/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages.properties
@@ -5,9 +5,9 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
-aolet.list.external = External Aolets List
-aolet.list = List aolets
-aolet.create = Create aolet
+omamek.list.external = External omameks List
+omamek.list = List omameks
+omamek.create = Create omamek
 audit.create = Create audit
 audit.edit = Edit
 audit.show = Show
