--- a/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
+++ b/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
@@ -6,9 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-aolet.list.external = Lista externa de aolets
-aolet.list = Lista de aolets
-aolet.create = Crear aolet
+omamek.list.external = Lista externa de omameks
+omamek.list = Lista de omameks
+omamek.create = Crear omamek
 audit.create = Crear auditoria
 audit.edit = Editar
 audit.show = Mostrar
