Control Check con Retake - Alejandro

--- a/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages.properties
+++ b/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages.properties
@@ -16,3 +16,7 @@ audit.save = Save
 audit.delete = Delete
 audit.cancel = Cancel
 audit.error = Error
+audit.listPelfs = List of Pelfs
+audit.pelf = Create
+audit.createPelf = Create Pelf
+audit.pelfs = Pelfs
