--- a/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
+++ b/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/audit/messages_es.properties
@@ -16,3 +16,7 @@ audit.save = Guardar
 audit.delete = Borrar
 audit.cancel = Cancelar
 audit.error = Error
+audit.listPelfs = Pelfs
+audit.pelf = Lista de Pelfs
+audit.createPelf = Crear Pelfs
+audit.pelf = Crear
