--- a/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
+++ b/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/master-page/messages.properties
@@ -28,6 +28,7 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 master.page.problem = Problems
 master.page.company.problem.list = List of your problems
+master.page.company.pelf = My Pelfs
 master.page.position.finder = Finder of positions
 
 master.page.rookie.curricula = My curriculas
