--- a/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
+++ b/D06 - Control Check/Control Check - Aleks/Item 3 - Project/Acme-Rookies/src/main/webapp/views/master-page/messages_es.properties
@@ -21,6 +21,7 @@ master.page.administrator.customAction = Customizar
 master.page.administrator.noenabled = Actores Spam
 
 master.page.company.listPublic = Lista de compañías pública
+master.page.company.pelf = Mis Pelfs
 master.page.position.listPublic = Lista de posiciones pública
 master.page.administrator			= Administrador
 master.page.position = Puestos de Trabajo
